fidoconfig 0.91
---------------

----- cvs ci ------
Sat Feb 12 19:40:00 IZH 2000
Georgi:
* added new token originInAnnounce for htick

----- cvs ci ------
Sat Feb 12 20:50:26 NOVT 2000
max:
* print error if LinkGrp, OptGrp & AccessGrp parsed before Link definition

----- cvs ci ------
Sat Feb 12 16:45:00 IZH 2000
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added new keyword for htick:
  SaveTic <FileEchoMask> <DirToSaveTic>

----- cvs ci ------
Mon Feb  7 22:37:12 NOVT 2000
max:
* fconf2squish: don't write "-$g0" for "0" groups
* "grep -i" in linkedto script
patch from Alex Bronin (2:5049/36):
* using system copy/move functions in win32 and os2 (ifdef USE_SYSTEM_COPY)
* added ExecOnFile keyword

----- cvs ci ------
Sun Jan  6 01:24:10 NOVT 2000
max:
* add token noProcessBundles

----- cvs ci ------
Sat Feb  5 02:36:03 NOVT 2000
max:
* bugfix for groups: allocation memory for \0 (patch from Serguei)
* export, import, mandatory makes as unsigned int

----- cvs ci ------
Tue Feb  1 22:19:01 NOVT 2000
max:
* added getEchoArea()
* getArea() returns echo & local areas
* added autoAreaCreateDefaults & autoFileCreateDefaults to tparser
* added PublicGroup to tparser
* changes in documentation
* do not transtale groups to lowercase - we have case unsensitive _tokens_

----- cvs ci ------
Sun Jan 30 17:06:45 NOVT 2000
max:
* added token areafixOrigin

----- cvs ci ------
Sun Jan 30 13:09:29 NOVT 2000
max:
* moved proposal to husky-common
* change doc file (escape sequences)

----- cvs ci ------
Fri Jan 28 21:40:00 CET 2000
sms:
* changed groups from chars to strings

----- cvs ci ------
Sat Jan 29 00:32:51 NOVT 2000
max:
* change makefiles to compile with $(LIB) & $(OBJ)
patch from Serguei Revtov:
* make fidoconfig compiling on sun (makefile.sun) again

----- cvs ci ------
Thu Jan 27 20:59:22 CET 2000
mtt:
* changed in makefile.common $(A) to $(LIB)

----- cvs ci ------
Thu Jan 27 18:42:50 CET 2000
mtt (patch from Alex Semyanka)