@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Sun Feb 13 15:59:24 NOVT 2000
+max (patch from Nestyurkin Nikolay):
+* fconf2squish: passthrough areas & groups fixes
+
+----- cvs ci ------
 Sat Feb 12 19:40:00 IZH 2000
 Georgi:
 * added new token originInAnnounce for htick
